cm4all-workshop (2.0.25) unstable; urgency=low

  * spawn: use the "systemd" controller

 --   

cm4all-workshop (2.0.24) unstable; urgency=low

  * spawn: fix bogus pivot_root() error message
  * workshop: write failure to jobs table after timeout
  * translation: add packet MOUNT_ROOT_TMPFS

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Aug 2017 10:07:22 -0000

cm4all-workshop (2.0.23) unstable; urgency=low

  * spawn: attach to existing network namespace with NETWORK_NAMESPACE_NAME
  * spawn: allow unshare(), mount(), umount(), pivot_root()
  * migrate: new database migration tool
  * workshop: add column "enabled"
  * cron: support month and weekday names

 -- Max Kellermann <mk@cm4all.com>  Fri, 04 Aug 2017 17:04:17 -0000

cm4all-workshop (2.0.22) unstable; urgency=low

  * spawn: run the PID namespace init process as root
  * spawn: tight system call whitelist for init process
  * spawn: forbid fanotify_*, nfsservctl, syslog
  * translation: fix the FORBID_MULTICAST setting
  * translation: add packet FORBID_BIND

 -- Max Kellermann <mk@cm4all.com>  Tue, 01 Aug 2017 10:43:29 -0000

cm4all-workshop (2.0.21) unstable; urgency=low

  * cron: change to home directory

 -- Max Kellermann <mk@cm4all.com>  Mon, 31 Jul 2017 08:34:38 -0000

cm4all-workshop (2.0.20) unstable; urgency=low

  * logger: fix log level
  * workshop: don't strip newlines from "log" column

 -- Max Kellermann <mk@cm4all.com>  Mon, 17 Jul 2017 11:41:57 -0000

cm4all-workshop (2.0.19) unstable; urgency=low

  * translation: add packet FORBID_MULTICAST
  * spawn: system call filter errors are fatal if explicitly enabled
  * spawn: apply cgroup namespace again after moving to new cgroup
  * doc: more "cronjobs" table documentation
  * doc: document the "cronresults" table

 -- Max Kellermann <mk@cm4all.com>  Fri, 14 Jul 2017 08:25:32 -0000

cm4all-workshop (2.0.18) unstable; urgency=low

  * translation: add packet CGROUP_NAMESPACE
  * translation: allow underscore in cgroup controller name