@@ -1,6 +1,7 @@
 cm4all-workshop (2.0.25) unstable; urgency=low
 
   * spawn: use the "systemd" controller
+  * cron: apply random delay to all cron jobs
 
  --   
 
